--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Mina"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
