--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,22 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Mina"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MINA">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/usr/bin/apache-mina-2.0.7"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="apache-mina-2.0.7-bin.zip"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/commons-logging-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/javassist-3.7.ga.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/javassist-3.11.0.GA.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/jcl-over-slf4j-1.6.6.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/jzlib-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/ognl-3.0.5.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/slf4j-api-1.6.6.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/spring-2.5.6.SEC03.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/tomcat-apr-5.5.23.jar"/>
+	<classpathentry kind="lib" path="/usr/bin/apache-mina-2.0.7/lib/xbean-spring-3.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
